--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,15 @@
 [build]
-  command = "mkdir -p static"
-  publish = "static" # A dummy directory, as this is a backend service
+  base = "page"
+  command = "npm install && npm run build"
+  publish = "page/dist"
+  functions = "functions"
 
+[[redirects]]
+  from = "/v1/*"
+  to = "/.netlify/functions/server/:splat"
+  status = 200
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/server"
+  to = "/index.html"
   status = 200
