--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "page"
   command = "npm install && npm run build"
-  publish = "page/dist"
+  publish = "dist"
   functions = "functions"
 
 [[redirects]]
