--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "cd page && npm install && npm run build"
-  publish = "page/dist"
-  functions = "functions"
+  publish = "dist"
+  functions = "../functions"
 
 [[redirects]]
   from = "/v1/*"
