--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "cd page && npm install && npm run build"
   publish = "dist"
-  functions = "../functions"
+  functions = "functions"
 
 [[redirects]]
   from = "/v1/*"
