--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "cd page && npm install && npm run build"
-  publish = "dist"
+  publish = "page/dist"
   functions = "functions"
 
 [[redirects]]
